--- a/.classpath
+++ b/.classpath
@@ -8,8 +8,8 @@
 	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="C:/Program Files/oracle/Oracle JDBC Drivers/ojdbc10.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/oracle/orai18n-23.3.0.23.09.jar"/>
+	<classpathentry kind="lib" path="C:/oracle/ojdbc10.jar"/>
+	<classpathentry kind="lib" path="C:/oracle/orai18n.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.5"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
